--- a/src/com/milkyway/GUI/BanHangJPanel.form
+++ b/src/com/milkyway/GUI/BanHangJPanel.form
@@ -127,7 +127,7 @@
                       </Group>
                       <Group type="102" alignment="1" attributes="0">
                           <EmptySpace max="32767" attributes="0"/>
-                          <Component id="btnXuatHD" min="-2" pref="195" max="-2" attributes="0"/>
+                          <Component id="btnThanhToan" min="-2" pref="195" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="119" max="-2" attributes="0"/>
                       </Group>
                   </Group>
@@ -140,7 +140,7 @@
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="jPanel6" min="-2" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="2" max="-2" attributes="0"/>
-                          <Component id="btnXuatHD" min="-2" pref="53" max="-2" attributes="0"/>
+                          <Component id="btnThanhToan" min="-2" pref="53" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
                       </Group>
                   </Group>
@@ -321,6 +321,7 @@
                         <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
                           <Color id="Hand Cursor"/>
                         </Property>
+                        <Property name="enabled" type="boolean" value="false"/>
                       </Properties>
                       <Events>
                         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnSuDungDiemActionPerformed"/>
@@ -414,7 +415,7 @@
                                                   </Group>
                                               </Group>
                                               <Group type="103" groupAlignment="0" attributes="0">
-                                                  <Component id="txtTienkhachtra" linkSize="4" min="-2" pref="275" max="-2" attributes="0"/>
+                                                  <Component id="txtTienKhachTra" linkSize="4" min="-2" pref="275" max="-2" attributes="0"/>
                                                   <Component id="lblTienCanTra" max="32767" attributes="0"/>
                                               </Group>
                                           </Group>
@@ -482,7 +483,7 @@
                               <EmptySpace type="separate" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="3" attributes="0">
                                   <Component id="jLabel31" alignment="3" max="32767" attributes="0"/>
-                                  <Component id="txtTienkhachtra" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
+                                  <Component id="txtTienKhachTra" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace type="separate" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
@@ -643,7 +644,7 @@
                         <Property name="text" type="java.lang.String" value="Kh&#xe1;ch tr&#x1ea3;"/>
                       </Properties>
                     </Component>
-                    <Component class="javax.swing.JTextField" name="txtTienkhachtra">
+                    <Component class="javax.swing.JTextField" name="txtTienKhachTra">
                       <Properties>
                         <Property name="name" type="java.lang.String" value="Ti&#x1ec1;n kh&#xe1;ch tr&#x1ea3;" noResource="true"/>
                       </Properties>
@@ -688,7 +689,7 @@
                     </Component>
                   </SubComponents>
                 </Container>
-                <Component class="javax.swing.JButton" name="btnXuatHD">
+                <Component class="javax.swing.JButton" name="btnThanhToan">
                   <Properties>
                     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                       <Color blue="66" green="ff" red="66" type="rgb"/>
@@ -705,7 +706,7 @@
                     </Property>
                   </Properties>
                   <Events>
-                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnXuatHDActionPerformed"/>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnThanhToanActionPerformed"/>
                   </Events>
                 </Component>
               </SubComponents>
