--- a/src/com/milkyway/GUI/ComboSPJDialog.form
+++ b/src/com/milkyway/GUI/ComboSPJDialog.form
@@ -124,7 +124,7 @@
                                                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
                                                       <Component id="txtTongGia" pref="324" max="32767" attributes="0"/>
                                                       <Group type="102" attributes="0">
-                                                          <Component id="spnSL" min="-2" pref="171" max="-2" attributes="0"/>
+                                                          <Component id="spnSoLuong" min="-2" pref="171" max="-2" attributes="0"/>
                                                           <EmptySpace type="separate" max="-2" attributes="0"/>
                                                           <Component id="btnConfirmSL" min="-2" max="-2" attributes="0"/>
                                                       </Group>
@@ -194,7 +194,7 @@
                                               <Component id="btnConfirmSL" alignment="0" min="-2" max="-2" attributes="0"/>
                                               <Group type="103" groupAlignment="3" attributes="0">
                                                   <Component id="jLabel15" alignment="3" min="-2" max="-2" attributes="0"/>
-                                                  <Component id="spnSL" alignment="3" min="-2" max="-2" attributes="0"/>
+                                                  <Component id="spnSoLuong" alignment="3" min="-2" max="-2" attributes="0"/>
                                               </Group>
                                           </Group>
                                           <EmptySpace type="separate" max="-2" attributes="0"/>
@@ -313,9 +313,9 @@
                 </Component>
                 <Component class="javax.swing.JTextField" name="txtMaCombo">
                 </Component>
-                <Component class="javax.swing.JSpinner" name="spnSL">
+                <Component class="javax.swing.JSpinner" name="spnSoLuong">
                   <Events>
-                    <EventHandler event="stateChanged" listener="javax.swing.event.ChangeListener" parameters="javax.swing.event.ChangeEvent" handler="spnSLStateChanged"/>
+                    <EventHandler event="stateChanged" listener="javax.swing.event.ChangeListener" parameters="javax.swing.event.ChangeEvent" handler="spnSoLuongStateChanged"/>
                   </Events>
                 </Component>
                 <Component class="javax.swing.JTextField" name="txtTongGia">
