--- a/src/com/milkyway/GUI/KhuyenMaiJPanel.form
+++ b/src/com/milkyway/GUI/KhuyenMaiJPanel.form
@@ -705,6 +705,9 @@
                             </Property>
                             <Property name="text" type="java.lang.String" value="L&#x1ecd;c"/>
                           </Properties>
+                          <Events>
+                            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnLocActionPerformed"/>
+                          </Events>
                         </Component>
                         <Component class="javax.swing.JCheckBox" name="ckbConHan">
                           <Properties>
@@ -728,6 +731,7 @@
                         <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
                           <ComponentRef name="buttonGroup1"/>
                         </Property>
+                        <Property name="selected" type="boolean" value="true"/>
                         <Property name="text" type="java.lang.String" value="D&#xf2;ng s&#x1ea3;n ph&#x1ea9;m"/>
                       </Properties>
                       <Events>
